postgres-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresdb
  namespace: sonarqube
spec:
  selector:
    app: postgresdb
  type: ClusterIP
  clusterIP: "None"
  ports:
    - port: 5432
      targetPort: 5432
