sonarqube-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  selector:
    app: sonarqube
  type: ClusterIP
  clusterIP: "None"
  ports:
    - port: 9000
      targetPort: 9000
