sonarqube-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  host: sonarqube.app.businessfabric.cloud
  port:
    targetPort: 9000
  tls:
    termination: edge
  to:
    kind: Service
    name: sonarqube
    weight: 100
status:
  ingress:
    - conditions:
      host: sonarqube.app.businessfabric.cloud
      routerName: router
      wildcardPolicy: None
