network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  podSelector:
    matchLabels:
      app: sonarqube
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
      ports:
        - port: 9000
          protocol: TCP
