network-postgres.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresdb
  namespace: sonarqube
spec:
  podSelector:
    matchLabels:
      app: postgresdb
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
      ports:
        - port: 5432
          protocol: TCP
